--- a/templates/reservation/new.html.twig
+++ b/templates/reservation/new.html.twig
@@ -1,14 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nouvelle Réservation
-{% endblock %}
+{% block title %}New Reservation{% endblock %}
 
 {% block body %}
-	<h1>Créer une nouvelle réservation</h1>
-	{{ form_start(form) }}
-	{{ form_widget(form) }}
-	<button type="submit">Créer</button>
-	{{ form_end(form) }}
+    <h1>Create new Reservation</h1>
 
-	<a href="{{ path('reservation_index') }}">Retour à la liste</a>
+    {{ include('reservation/_form.html.twig') }}
+
+    <a href="{{ path('app_reservation_index') }}">back to list</a>
 {% endblock %}
