--- a/templates/room/_delete_form.html.twig
+++ b/templates/room/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('room_delete', {'id': room.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cette salle ?');">
+<form method="post" action="{{ path('app_room_delete', {'id': room.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer cette salle ?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ room.id) }}">
     <button class="btn btn-danger">Supprimer</button>
 </form>
