--- a/templates/room/edit.html.twig
+++ b/templates/room/edit.html.twig
@@ -1,18 +1,15 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modifier la salle {{ room.name }}{% endblock %}
+{% block title %}Modifier la salle{% endblock %}
 
 {% block body %}
-    <h1>Modifier la salle</h1>
+    <div class="container mt-4">
+        <h1>Modifier la salle</h1>
 
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <button class="btn btn-primary">{{ button_label|default('Enregistrer les modifications') }}</button>
-    {{ form_end(form) }}
+        {{ include('room/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
-    <a href="{{ path('room_index') }}" class="btn btn-secondary">Retour à la liste des salles</a>
+        <a href="{{ path('app_room_index') }}" class="btn btn-secondary mt-3">Retour à la liste</a>
 
-    <a href="{{ path('room_show', {'id': room.id}) }}" class="btn btn-info">Voir les détails</a>
-
-    {{ include('room/_delete_form.html.twig') }}
+        {{ include('room/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
