--- a/templates/room/new.html.twig
+++ b/templates/room/new.html.twig
@@ -1,14 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nouvelle Salle{% endblock %}
+{% block title %}Nouvelle salle{% endblock %}
 
 {% block body %}
-    <h1>Créer une nouvelle salle</h1>
+    <div class="container mt-4">
+        <h1>Créer une nouvelle salle</h1>
 
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <button class="btn">{{ button_label|default('Enregistrer') }}</button>
-    {{ form_end(form) }}
+        {{ include('room/_form.html.twig') }}
 
-    <a href="{{ path('room_index') }}">Retour à la liste</a>
+        <a href="{{ path('app_room_index') }}" class="btn btn-secondary mt-3">Retour à la liste</a>
+    </div>
 {% endblock %}
