--- a/templates/room/show.html.twig
+++ b/templates/room/show.html.twig
@@ -1,56 +1,34 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Détails de la salle {{ room.name }}{% endblock %}
+{% block title %}Détails de la salle{% endblock %}
 
 {% block body %}
-    <h1>Détails de la salle</h1>
+    <div class="container mt-4">
+        <h1>Détails de la salle</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>ID</th>
-                <td>{{ room.id }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ room.name }}</td>
-            </tr>
-            <tr>
-                <th>Capacité</th>
-                <td>{{ room.capacity }}</td>
-            </tr>
-            <tr>
-                <th>Équipements</th>
-                <td>
-                    <ul>
-                    {% for equipment in room.equipments %}
-                        <li>{{ equipment }}</li>
-                    {% else %}
-                        <li>Aucun équipement enregistré</li>
-                    {% endfor %}
-                    </ul>
-                </td>
-            </tr>
-            <tr>
-                <th>Critères d'ergonomie</th>
-                <td>
-                    <ul>
-                    {% for ergonomic in room.ergonomics %}
-                        <li>{{ ergonomic }}</li>
-                    {% else %}
-                        <li>Aucun critère d'ergonomie enregistré</li>
-                    {% endfor %}
-                    </ul>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+        <table class="table">
+            <tbody>
+                <tr>
+                    <th>Nom</th>
+                    <td>{{ room.name }}</td>
+                </tr>
+                <tr>
+                    <th>Capacité</th>
+                    <td>{{ room.capacity }}</td>
+                </tr>
+                <tr>
+                    <th>Équipements</th>
+                    <td>{{ room.equipments|join(', ') }}</td>
+                </tr>
+                <tr>
+                    <th>Ergonomie</th>
+                    <td>{{ room.ergonomics|join(', ') }}</td>
+                </tr>
+            </tbody>
+        </table>
 
-    <a href="{{ path('room_availability', {'id': room.id}) }}" class="btn btn-primary">Voir les disponibilités</a>
-
-    <a href="{{ path('room_index') }}" class="btn btn-secondary">Retour à la liste des salles</a>
-
-    <a href="{{ path('room_edit', {'id': room.id}) }}" class="btn btn-warning">Modifier</a>
-
-    {{ include('room/_delete_form.html.twig') }}
+        <a href="{{ path('app_room_index') }}" class="btn btn-secondary">Retour à la liste</a>
+        <a href="{{ path('app_room_edit', {'id': room.id}) }}" class="btn btn-warning">Modifier</a>
+        {{ include('room/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
