--- a/templates/reservation/index.html.twig
+++ b/templates/reservation/index.html.twig
@@ -1,3 +1,4 @@
+{# templates/reservation/index.html.twig #}
 {% extends 'base.html.twig' %}
 
 {% block title %}My Reservations{% endblock %}
@@ -26,8 +27,16 @@
                     <a href="{{ path('app_reservation_show', {'id': reservation.id}) }}" class="text-blue-600 hover:underline">View</a>
                     {% if reservation.status == 'pre_reserved' %}
                         <a href="{{ path('app_reservation_edit', {'id': reservation.id}) }}" class="text-blue-600 hover:underline ml-2">Edit</a>
+                        <form method="post" action="{{ path('app_reservation_delete', {'id': reservation.id}) }}" onsubmit="return confirm('Are you sure you want to delete this reservation?');" style="display: inline;">
+                            <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ reservation.id) }}">
+                            <button type="submit" class="text-red-600 hover:underline ml-2">Delete</button>
+                        </form>
                     {% endif %}
                 </td>
+            </tr>
+        {% else %}
+            <tr>
+                <td colspan="5" class="py-2 px-4 border-b text-center">No reservations found</td>
             </tr>
         {% endfor %}
         </tbody>
