Updated my project

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -50,7 +50,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Administration</h5>
                     <p class="card-text">Accédez au panneau d'administration.</p>
-                    <a href="{{ path('admin') }}" class="btn btn-info">Tableau de bord admin</a>
+                    <a href="{{ path('admin_dashboard') }}" class="btn btn-info">Tableau de bord admin</a>
                 </div>
             </div>
         </div>
