--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,6 +17,7 @@
             <div class="container mx-auto flex justify-between">
                 <a href="{{ path('app_home') }}" class="text-lg font-bold">Room Reservation System</a>
                 <div>
+                    <a href="{{ path('app_room_availability') }}">Consulter les disponibilités</a>
                     <a href="{{ path('app_room_index') }}" class="mr-4">Search Rooms</a>
                     {% if is_granted('ROLE_USER') %}
                         <a href="{{ path('app_reservation_index') }}" class="mr-4">My Reservations</a>
